# ifc-lite-core-cat

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: attribute.rs  decode.rs  entity_id.rs  error.rs  ifc_type.rs  lib.rs  parse.rs  scan.rs  schema.rs  streaming.rs  token.rs
